syntax = "proto3";

package ai_chat.v1;

enum LlmIntegration {
  LLM_INTEGRATION_UNSPECIFIED = 0;
  LLM_INTEGRATION_OPENAI = 1;
  LLM_INTEGRATION_ANTHROPIC = 2;
  LLM_INTEGRATION_GEMINI = 3;
  LLM_INTEGRATION_OLLAMA = 4;
}

enum ChatMessageRole {
  CHAT_MESSAGE_ROLE_UNSPECIFIED = 0;
  CHAT_MESSAGE_ROLE_USER = 1;
  CHAT_MESSAGE_ROLE_ASSISTANT = 2;
}

message Chat {
  int64 id = 1;
  string title = 2;
  int64 created_at_unix_ms = 3;
  int64 updated_at_unix_ms = 4;
}

message ChatMessage {
  int64 id = 1;
  int64 chat_id = 2;
  ChatMessageRole role = 3;
  LlmIntegration integration = 4;
  string content = 5;
  int64 created_at_unix_ms = 6;
}

message CreateChatRequest {
  string title = 1;
}

message CreateChatResponse {
  Chat chat = 1;
}

message ListChatsResponse {
  repeated Chat chats = 1;
}

message InteractChatRequest {
  string prompt = 1;
  repeated LlmIntegration integrations = 2;
}

message InteractChatResponse {
  Chat chat = 1;
  ChatMessage prompt_message = 2;
  repeated ChatMessage responses = 3;
}
